# moore

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  compile_pulpino.sh  pulpino_fixes.sv  rust-toolchain.toml
.github/: build-circt.sh  build-llvm.sh
.github/workflows/: ci.yml
ci/: clone-pulpino.sh  doc-upload.sh
circt-sys/: build.rs  wrapper.h
circt-sys/examples/: empty.rs
circt-sys/src/: lib.rs
circt/examples/: empty.rs
circt/src/: comb.rs  lib.rs  mlir.rs
docs/: Makefile  ports.md  queries.dot  svlog_grammar.txt
docs/standards/: index.md
pre/: Makefile  build.rs  test.rs
pre/pargen/: codegen.rs  grammar.rs  lexer.rs  mod.rs  new_grammar.rs  parser.rs  states.rs
pulpino/: generate_moore.py
scripts/: build-circt.sh  check_copyrights.sh  doc_upload.sh  recursive_publish.sh  release_check.sh  release_status.sh  summarize_symbiflow.sh  symbiflow_history.py  symbiflow_summarize.sh  symbiflow_test_pargen.sh  test.py  update_manifests.sh
src/: NOTES.md  lexer.rs  lib.rs  main.rs  name.rs  score.rs  source.rs
src/circt/: Cargo.toml
src/circt-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
src/circt-sys/examples/: empty.rs
src/circt-sys/src/: lib.rs
src/circt/examples/: empty.rs
src/circt/src/: builtin.rs  cf.rs  comb.rs  func.rs  hw.rs  lib.rs  llhd.rs  mlir.rs  moore.rs  seq.rs  std.rs
src/circt/src/mlir/: attr.rs  builder.rs  context.rs  loc.rs  mod.rs  ty.rs  value.rs
src/common/: Cargo.toml  arenas.rs  errors.rs  id.rs  lexer.rs  lib.rs  name.rs  score.rs  source.rs  util.rs
src/common/grind/: filter.rs  lookahead.rs  mod.rs  peek.rs  utf8.rs
src/derive/: Cargo.toml  accept_visitor.rs  all_node.rs  arena.rs  call_visitor.rs  lib.rs  node.rs  node_data.rs  query.rs  visitor.rs  walk_visitor.rs
src/errors/: mod.rs
src/svlog/: Cargo.toml  ast.rs  ast_map.rs  call_mapping.rs  cat.rs  codegen.rs  context.rs  func_args.rs  grammar  inst_details.rs  lexer-old.rs  lexer.rs  lib.rs  mod.rs  param_env.rs  parser.rs  pattern_mapping.rs  port_list.rs  port_mapping.rs  preproc-old.rs  preproc.rs  renumber.rs  resolve.rs  resolver.rs  rst.rs  token.rs  ty.rs  typeck.rs  value.rs
src/svlog/codegen/: mod.rs
src/svlog/hir/: Cargo.toml  lib.rs  lower.rs  lowering.rs  mod.rs  nodes.rs  visit.rs
src/svlog/hir/lower/: mod.rs  port.rs
src/svlog/mir/: assign.rs  lower.rs  lvalue.rs  mod.rs  print.rs  rvalue.rs  visit.rs
src/svlog/mir/lower/: assign.rs  lvalue.rs  mod.rs  rvalue.rs
src/svlog/syntax/: Cargo.toml  ast.rs  cat.rs  grammar.pg  grammar.rs  lexer.rs  lib.rs  parser.rs  preproc.rs  renumber.rs  resolve.rs  store.rs  token.rs  update_grammar.sh
src/svlog/syntax/examples/: pargen-parse.rs
src/svlog/syntax/pargen/: Cargo.toml  ast.rs  codegen.rs  context.rs  factor.rs  ll.rs  main.rs  moore-pargen.sublime-syntax  parser.lalrpop  parser.rs  populate.rs  svlog.lalrpop
src/svlog/syntax/pargen/src/: ast.rs  codegen.rs  context.rs  factor.rs  ll.rs  lr.rs  main.rs  opt.rs  parser.lalrpop  parser.rs  populate.rs
src/svlog/syntax/tests/: exprs.rs  unit.rs
src/svlog/syntax/tests/common/: mod.rs
src/svlog/tests/: codegen.rs  ports.rs  ports.rs-disabled
src/svlog/tests/common/: mod.rs
src/svlog/typeck/: mod.rs
src/vhdl/: Cargo.toml  TODO.md  add_ctx.rs  arenas.rs  ast.rs  builtin.rs  codegen.rs  debug.rs  defs.rs  expr.rs  grammar  hir.rs  konst.rs  lazy.rs  lexer.rs  lib.rs  make_ctx.rs  mod.rs  obj_decl.rs  op.rs  overload_resolver.rs  parser.rs  parser_autogen.rs  scope.rs  scope2.rs  score.rs  seq_stmt.rs  symtbl.rs  term.rs  token.rs  ty.rs  typeck.rs
src/vhdl/hir/: TODO.md  alloc_ctx.rs  arena.rs  expr.rs  lib.rs  misc.rs  mod.rs  node.rs  obj_decl.rs  pkg.rs  prelude.rs  slot.rs  subtype_decl.rs  type_decl.rs  visit.rs
src/vhdl/konst2/: arena.rs  floating.rs  integer.rs  mod.rs  traits.rs
src/vhdl/nodes/: expr.rs  misc.rs  mod.rs  obj_decl.rs  seq_stmt.rs  type_decl.rs
src/vhdl/parser/: bundler.rs  categorizer.rs  lexer.rs  mod.rs  token.rs  tokenizer.rs
src/vhdl/pass/: lower.rs  mod.rs  renumber.rs
src/vhdl/score/: cval.rs  hir_lowering.rs  lower_hir.rs  mod.rs  scope.rs  type_checking.rs  typeck.rs
src/vhdl/syntax/: Cargo.toml  ast.rs  lib.rs  mod.rs
src/vhdl/syntax/lexer/: bundler.rs  categorizer.rs  mod.rs  token.rs  tokenizer.rs
src/vhdl/syntax/parser/: NOTES.txt  basic.rs  core.rs  mod.rs  rules.rs  test.rs  token_stream.rs
src/vhdl/ty2/: access.rs  arena.rs  basetypes.rs  enums.rs  floats.rs  ints.rs  marks.rs  mod.rs  physical.rs  prelude.rs  range.rs  subtypes.rs  types.rs
test/: lit.cfg.py  run.sh
test/cli/: output_llhd.sv  output_mlir.sv
test/mlir/: assign_concat.sv  assign_nested_concat.sv  calls.sv  debug-info.sv  expressions.sv  functions.sv  iss193_nonconst_pow.sv  iss194_range_offset.sv  param_values.sv  statements.sv  svlog-codegen.sv  wire_initial_expr.sv
test/svlog/: alu.sv  array_query_fns.sv  assign.sv  builtins.sv  cast_size.sv  codegen_expr_patterns.sv  common_cells.sv  const_ops.sv  counter.sv  enum.sv  enum_variants_accessible.sv  event.sv  exprs.sv  generate_for.sv  genvar_in_proc.sv  initial.sv  literals.sv  loop_stmt.sv  operators.sv  param_decls.sv  param_port_list.sv  ports.sv  resize_cast.sv  run_symbiflow_tests.sh  stmt_label.sv  synthesis.sv
test/vhdl/: arch_body.vhd  bit_string_literals.vhd  config.vhd  decls_pkg_body.vhd  entity.vhd  exprs.vhd  obj_decl_signal.vhd  overload_ops.vhd  package_decl.vhd  pkg_1.vhd  process_0.vhd  process_1.vhd  reports.vhd  select_into_used_pkg.vhd  seq_signal_assignment_1.vhd  seq_stmts.vhd  signatures.vhd  std_bit.vhd  std_file_open_kind.vhd  std_integer.vhd  std_severity_level.vhd  std_time.vhd  subprog_0.vhd  type_array.vhd  type_phys.vhd
tests/: TODO  open_cycle_delay.sv  param_port_list.sv  params.sv  params_port_with_type.sv  run.sh  typecast.sv  typedef_enum.sv
tests/svlog/: alu.sv  array_access.sv  array_query_fns.sv  assign.sv  assoc.sv  attributes.sv  builtins.sv  case_inside.sv  cast_size.sv  const_ops.sv  counter.sv  event.sv  exprs.sv  generate_for.sv  (+18 more)
(+229 files in other folders)
