[package]
name = "moore"
version = "0.8.0-dev"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "A compiler for hardware description languages."
repository = "https://github.com/fabianschuiki/moore"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
travis-ci = { repository = "fabianschuiki/moore", branch = "master" }

[workspace]

[dependencies]
moore-common = { path = "src/common", version = "0.8.0-dev" }
moore-derive = { path = "src/derive", version = "0.8.0-dev" }
moore-svlog = { path = "src/svlog", version = "0.8.0-dev" }
moore-vhdl = { path = "src/vhdl", version = "0.8.0-dev" }
clap = "2"
# llhd = { git = "https://github.com/fabianschuiki/llhd", rev = "master", version = "0.9" }
llhd = "0.13"
num = "0.1"
serde = "1"
typed-arena = "2.0.1"
log = "0.4"
stderrlog = "0.4"

[features]
unstable = []

[[bin]]
doc = false
name = "moore"
path = "src/bin/moore.rs"
