[package]
name = "moore-circt-sys"
version = "0.14.0"
authors = ["Fabian Schuiki <fabian@schuiki.ch>"]
edition = "2018"

description = "Low-level language bindings to CIRCT."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.59.0"
cc = "1.0"
