[package]
name = "moore-common"
version = "0.11.0-dev"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "The common core of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[lib]
path = "lib.rs"

[dependencies]
memmap = "0.5.0"
serde = "1"
bitflags = "1.2"
typed-arena = "2.0.1"
