[package]
name = "moore-derive"
version = "0.12.0-dev"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "Procedural macros for the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = { version = "1", features = ["extra-traits", "full", "visit"] }
quote = "1"
heck = "0.3"
proc-macro2 = "1"
