[package]
name = "moore-svlog"
version = "0.7.0"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "The SystemVerilog implementation of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

include = ["**.rs", "*.toml"]

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../common", version = "0.7.0" }
moore-svlog-syntax = { path = "syntax", version = "0.7.0" }
# llhd = { git = "https://github.com/fabianschuiki/llhd", rev = "master", version = "0.9" }
llhd = "0.9"
log = "0.4"
# salsa = { git = "https://github.com/fabianschuiki/salsa", branch = "database-lifetimes" }
num = "0.2"
bit-vec = "0.6.1"
itertools = "0.9"
backtrace = "0.3"

# salsa inlined dependencies
# TODO(fschuiki): Remove this once salsa is a regular dependency again.
derive-new = "0.5.5"
rustc-hash = "1.0"
parking_lot = "0.7.0"
lock_api = "0.1.4"
indexmap = "1.0.1"
smallvec = "0.6.5"

[dev-dependencies]
simple_logger = "1"
