[package]
name = "moore-svlog"
version = "0.13.1"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "The SystemVerilog implementation of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

include = ["**.rs", "*.toml"]

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../common", version = "0.13.1" }
moore-derive = { path = "../derive", version = "0.13.1" }
moore-svlog-syntax = { path = "syntax", version = "0.13.1" }
llhd = "0.16"
# llhd = { git = "https://github.com/fabianschuiki/llhd" }
log = "0.4"
num = "0.3"
bit-vec = "0.6.2"
itertools = "0.10"
backtrace = "0.3"
bitflags = "1.2"
once_cell = "1.3"
