[package]
name = "moore-vhdl"
version = "0.12.1"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "The VHDL implementation of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../common", version = "0.12.1" }
moore-vhdl-syntax = { path = "syntax", version = "0.12.1" }
lazy_static = "1.4"
llhd = "0.15"
# llhd = { git = "https://github.com/fabianschuiki/llhd" }
num = "0.3"
typed-arena = "2.0.1"
