[package]
name = "moore-svlog-hir"
version = "0.1.0"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]

description = "The HIR of the SystemVerilog implementation of the moore compiler framework."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../../common", version = "0.1" }
moore-svlog-syntax = { path = "../syntax", version = "0.1" }
slog = "2.0.12"
