[package]
name = "moore-svlog-syntax"
version = "0.10.0-dev"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "The SystemVerilog parser implementation of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../../common", version = "0.10.0-dev" }
moore-derive = { path = "../../derive", version = "0.10.0-dev" }
log = "0.4"
backtrace = "0.3"
once_cell = "1.3"
