[package]
name = "moore-vhdl-syntax"
version = "0.8.0-dev"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "The VHDL parser implementation of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../../common", version = "0.8.0-dev" }
bincode = "0.6.1"
rustc-serialize = "0.3"
slog = "2.0.12"
once_cell = "1.3"
